Fix z-index to avoid the widget go behind the admin menu on small screen

--- a/css/black-studio-tinymce-widget.css
+++ b/css/black-studio-tinymce-widget.css
@@ -139,6 +139,13 @@ div[id*="black-studio-tinymce"] .mce-wp-fullscreen {
 	z-index: 500025;
 }
 
+/* Fix z-index to avoid the widget go behind the admin menu on small screen */
+
+.widget[id*="black-studio-tinymce"] {
+	z-index: 100000 !important;
+}
+
+
 /* Fix for wide widgets left positioning on Customizer with large screens */
 
 @media (min-width: 1666px) {
